# reinout.vanrees.org

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.rst  deploy.cfg  development.cfg  package-lock.json  package.json  pyproject.toml  setup.py
.github/: renovate.json5
docs/: Makefile
rvo/: homepage.py  rst.py  sermonlog.py  sitemap.py  utils.py  videos.py  weblog.py
rvo/templates/: atom.xml  context.md  homepage.html  homepagesnippet.html  layout.html  sitemap.xml  statistics.html
