[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reinout-vanrees-org"
version = "0.1.0"
description = "Stuff for my website"
readme = "README.rst"
requires-python = ">=3.12"
authors = [
    {name = "Reinout van Rees", email = "reinout@vanrees.org"},
]
dependencies = [
    "jinja2",
    "sphinx",
    "docutils",
    "tomlkit",
    "myst-parser>=4.0.0",
    "linkify-it-py>=2.0.3",
]

[tool.setuptools]
packages = ["rvo"]

[project.scripts]
create-weblog-pages = "rvo.weblog:main"
create-sermonlog = "rvo.sermonlog:main"
create-homepage = "rvo.homepage:main"
create-sitemap = "rvo.sitemap:main"
create-videos = "rvo.videos:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "C901"]
